--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Home.razor
@@ -9,7 +9,7 @@
         <img src="https://cdn.mos.cms.futurecdn.net/YfcLFQhjH3dBhA2tGqs8Qf-970-80.jpg.webp" alt="New Premier League Logo" style="height: 110px; background-color: white; border-radius: 5%;" class="mb-4" />
         <h1 class="display-5 fw-bold" style="color: white;">Welcome to the Prediction League</h1>
         <p class="fs-4 col-md-8 mx-auto">Think you know the Premier League? Prove it. Predict the scores for every match, every week, and compete against friends and rivals to top the leaderboard.</p>
-        <NavLink class="btn btn-lg mt-3" href="register" style="background-image: linear-gradient(to right, #90EE90, var(--pl-green)); border: none; color: white; font-weight: 700;">Get Started</NavLink>
+        <NavLink class="btn btn-lg mt-3 green-button" href="register">Register Now</NavLink>
     </div>
 </div>
 
