--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Create.razor
@@ -9,7 +9,7 @@
 
 <PageTitle>Create Round</PageTitle>
 
-<div class="my-details-container">
+<div class="page-container">
     <div class="form-container">
         <h3 class="text-center fw-bold text-white mb-4">Create New Round for Season: @_seasonName</h3>
 
@@ -119,7 +119,7 @@
 </div>
 
 <style>
-    .my-details-container {
+    .page-container {
         background-color: var(--pl-purple);
         min-height: calc(100vh - 56px);
         display: flex;
