--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
@@ -10,7 +10,7 @@
 
 <PageTitle>Manage Rounds</PageTitle>
 
-<div class="my-details-container">
+<div class="page-container">
     <div class="admin-table-container">
         <h3 class="fw-bold text-white mb-4">Manage Rounds</h3>
 
@@ -56,7 +56,7 @@
 </div>
 
 <style>
-    .my-details-container {
+    .page-container {
         background-color: var(--pl-purple);
         min-height: calc(100vh - 56px);
         padding: 2rem;
