--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Create Season</PageTitle>
 
-<div class="my-details-container">
+<div class="page-container">
     <div class="form-container">
         <h3 class="text-center fw-bold text-white mb-4">Create New Season</h3>
 
@@ -58,7 +58,7 @@
 </div>
 
 <style>
-    .my-details-container {
+    .page-container {
         background-color: var(--pl-purple);
         min-height: calc(100vh - 56px);
         display: flex;
