--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/Edit.razor
@@ -12,7 +12,7 @@
 
 <PageTitle>Edit Round</PageTitle>
 
-<div class="my-details-container">
+<div class="page-container">
     <div class="form-container">
         <h3 class="text-center fw-bold text-white mb-4">Edit Round</h3>
         @if (_model == null)
@@ -101,7 +101,7 @@
 </div>
 
 <style>
-    .my-details-container {
+    .page-container {
         background-color: var(--pl-purple);
         min-height: calc(100vh - 56px);
         display: flex;
