--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Edit.razor
@@ -11,7 +11,7 @@
 
 <PageTitle>Edit Season</PageTitle>
 
-<div class="my-details-container">
+<div class="page-container">
     <div class="form-container">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h3 class="fw-bold text-white mb-0">Edit Season</h3>
@@ -81,7 +81,7 @@
 </div>
 
 <style>
-    .my-details-container {
+    .page-container {
         background-color: var(--pl-purple);
         min-height: calc(100vh - 56px);
         display: flex;
